[gd_scene load_steps=6 format=3 uid="uid://bsthm17tf7jl8"]

[ext_resource type="Script" path="res://scenes/Game.gd" id="1_o2fqb"]
[ext_resource type="PackedScene" uid="uid://bpiqhe2x4htta" path="res://menu/menu.tscn" id="2_7kotp"]
[ext_resource type="PackedScene" uid="uid://cf2nexjie7s88" path="res://menu/pause/PauseMenu.tscn" id="2_dal88"]
[ext_resource type="PackedScene" uid="uid://4el3kq51boe8" path="res://bathtub_level/bathtub_level.tscn" id="3_3m3yt"]
[ext_resource type="Script" path="res://scenes/camera_rotate_around.gd" id="4_hv10x"]

[node name="Game" type="Node3D" node_paths=PackedStringArray("menu", "main_level")]
script = ExtResource("1_o2fqb")
menu = NodePath("Menu")
main_level = NodePath("BathtubLevel")
menu_scene = ExtResource("2_7kotp")

[node name="Menu" parent="." instance=ExtResource("2_7kotp")]

[node name="BathtubLevel" parent="." instance=ExtResource("3_3m3yt")]

[node name="RotateCameraAnchor" type="Node3D" parent="." node_paths=PackedStringArray("look_at_target", "camera")]
script = ExtResource("4_hv10x")
rotation_speed = 3.0
look_at_target = NodePath("../BathtubLevel/Baignoire")
camera = NodePath("MainMenuCamera")

[node name="MainMenuCamera" type="Camera3D" parent="RotateCameraAnchor"]
transform = Transform3D(-3.89121e-08, -0.45556, 0.890205, -1.99132e-08, 0.890205, 0.45556, -1, -3.55271e-14, -4.37114e-08, 2.49574, 2.26059, 0)
current = true

[node name="PauseMenu" parent="." instance=ExtResource("2_dal88")]
visible = false
